--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -18,7 +18,7 @@
       </div>
 
       <div id="register-or-login" class="mt-4 mb-4 d-none" style="background:#f9f9f9;padding:16px">
-        Please join or login to submit a comment:<br />
+        <small>Please join or login to submit a comment:</small><br />
         <button type="button" class="btn btn-primary mb-0 mt-2 mr-2" data-toggle="modal" data-target="#register-modal">JOIN</button>
         <button type="button" class="btn mb-0 mt-2" data-toggle="modal" data-target="#login-modal">LOGIN</button>
       </div>
