--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -5,6 +5,47 @@
   <meta name="description" content="" />
 
   {{>head}}
+  <style>
+    .thread-preview {
+      border: 1px solid #ededed;
+      border-radius: 6px;
+      display: flex
+    }
+
+    .thread-preview-img {
+      padding: 0px;
+    }
+
+    .thread-preview-img img {
+      max-width: 220px;
+      max-height: 220px;
+    }
+
+    .thread-preview-container {
+      flex: 1;
+      padding: 16px;
+    }
+
+    .thread-preview-container small {
+      color: #b1b0b0;
+      font-size: 12px;
+    }
+
+    .thread-preview-container span {
+      margin: 6px;
+    }
+
+    .thread-preview-container a {
+      text-decoration: none;
+    }
+
+    .site-icon {
+      border-radius: 50%;
+      margin-left: 6px;
+      width: 22px;
+    }
+  </style>
+
 </head>
 
 <body style="padding-top:0px">
@@ -36,6 +77,24 @@
           </div>
         </div>
         {{/comments}}
+
+        {{#comments}}
+        <div class="bg-white mb-4 thread-preview">
+          <div class="thread-preview-container">
+            <p style="color:#7d7d7d">{{{text}}}</p>
+            <div class="mb-0 mb-2" style="text-align:right">
+              <small>{{dateString}}</small>
+              <span>&middot;</span>
+              <a target="_blank" href="{{{site.url}}}"><small>{{profile.username}}</small></a>
+              <a target="_blank" href="{{{site.url}}}"><img class="site-icon" src="{{{profile.image}}}=s44-c" /></a>
+            </div>
+          </div>
+          <div style="width:24px;background:#e8f2ff">
+          </div>
+        </div>
+
+        {{/comments}}
+
       </div>
 		</div>
 	</div>
