--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -48,7 +48,7 @@
 
 </head>
 
-<body style="padding-top:0px">
+<body style="padding-top:0px;background:#f9f9f9">
 <div class="container pt-0 pb-4">
 	<div class="row justify-content-between">
 		<div class="col-md-8">
@@ -70,7 +70,7 @@
         <div class="bg-white mb-4 thread-preview">
           <div class="thread-preview-container">
             <p style="color:#7d7d7d">{{{text}}}</p>
-            <div class="mb-0 mb-2" style="text-align:right">
+            <div class="mb-0" style="text-align:right">
               <small>{{dateString}}</small>
               <span>&middot;</span>
               <a target="_blank" href="{{{site.url}}}"><small>{{profile.username}}</small></a>
@@ -94,13 +94,13 @@
   <script type="text/template" id="tpl-comment">
     <div class="bg-white mb-4 thread-preview">
       <div class="thread-preview-container">
-        <p style="color:#7d7d7d"><%{text}%></p>
-        <div class="mb-0 mb-2" style="text-align:right">
+        <div class="mb-0">
           <small><%dateString%></small>
           <span>&middot;</span>
           <a target="_blank" href="#"><small><%profile.username%></small></a>
           <a target="_blank" href="#"><img class="site-icon" src="<%{profile.image}%>=s44-c" /></a>
         </div>
+        <p style="color:#7d7d7d"><%{text}%></p>
       </div>
       <div style="width:24px;background:#e8f2ff">
       </div>
