--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -23,7 +23,7 @@
 
     .thread-preview-container {
       flex: 1;
-      padding: 16px;
+      padding: 12px;
     }
 
     .thread-preview-container small {
@@ -69,7 +69,7 @@
         {{#comments}}
         <div class="bg-white mb-4 thread-preview">
           <div class="thread-preview-container">
-            <div class="mb-2" style="text-align:right">
+            <div class="mb-2">
               <a target="_blank" href="{{{site.url}}}"><small>{{profile.username}}</small></a>
               <a target="_blank" href="{{{site.url}}}"><img class="site-icon" src="{{{profile.image}}}=s44-c" /></a>
               <span>&middot;</span>
