--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -86,7 +86,19 @@
 		</div>
 	</div>
 </div>
-  {{>footer}}
+
+<footer class="container p-3 text-muted small d-flex">
+	<div style="flex:1">
+		<a href="/">
+			<img class="mr-3 mb-3" style="max-width:120px" src="https://lh3.googleusercontent.com/hlcLdauNL9UiLa3K4wF5ZPNpHzi50R26y61Ahx7oRMbUNgujN-1SmeC_3zG4EHLBH5WnRhQ1ZS19KF_xcWqkTKoENw=s320" />
+		</a>
+	</div>
+	<div style="padding-top:9px">
+		Copyright &copy; <script>document.write(new Date().getFullYear())</script>. All rights reserved.
+	</div>
+</footer>
+
+
   {{>auth}}
   <a id="nav-register" style="display:none;" class="nav-link" href="#" data-toggle="modal" data-target="#register-modal">JOIN</a>
 
