--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -46,7 +46,7 @@
     }
 
     .entity-header {
-      padding: 12px;
+      padding: 4px;
       background: #f9f9f9;
       text-align: left;
       line-height: 20px;
@@ -76,7 +76,7 @@
 <div class="container pt-0 pb-4">
 	<div class="row justify-content-between">
 		<div class="col-md-8">
-      <div class="entity-header">
+      <div class="entity-header mt-2">
         <h1 id="entity-title"></h1>
         <small id="entity-date"></small>
       </div>
