comment out google auth script for now

--- a/views/partials/scripts.mustache
+++ b/views/partials/scripts.mustache
@@ -1,6 +1,6 @@
 <script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
 <script type="text/javascript" src="{{{cdn}}}/medium/js/vendor.min.js"></script>
-<script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
+<!-- <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script> -->
 <script type="text/javascript" src="{{{cdn}}}/scripts/googleauth.js"></script>
 <script type="text/javascript" src="{{{cdn}}}/scripts/auth.js"></script>
 {{#renderAnalytics}}{{>analytics}}{{/renderAnalytics}}
