--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -87,7 +87,7 @@
         <button id="btn-submit-comment" class="mb-3 btn btn-success float-right mt-2">Add Comment</button>
       </div>
 
-      <div id="register-or-login" class="mt-4 mb-4 d-none" style="background:#f9f9f9;padding:16px">
+      <div id="register-or-login" class="mt-4 mb-4 d-none" style="background:#f9f9f9;">
         <small>Please join or login to submit a comment:</small><br />
         <button type="button" class="btn btn-primary mb-0 mt-2 mr-2" data-toggle="modal" data-target="#register-modal">REGISTER</button>
         <button type="button" class="btn mb-0 mt-2" data-toggle="modal" data-target="#login-modal">LOGIN</button>
