--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -84,6 +84,15 @@
       <div id="comments-header" class="d-none">
         <textarea id="text-area-comment" class="form-control mt-3 mb-1" rows="3" style="padding:0px 8px;resize:none"></textarea>
         <small class="text-muted" id="display-username"></small>
+        <div class="btn-group">
+          <button class="dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Small button
+          </button>
+          <div class="dropdown-menu">
+            <a href="#">Logout</a>
+          </div>
+        </div>
+
         <button id="btn-submit-comment" class="mb-3 btn btn-success float-right mt-2">Add Comment</button>
       </div>
 
