--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -85,9 +85,9 @@
         <textarea id="text-area-comment" class="form-control mt-3 mb-1" rows="3" style="padding:0px 8px;resize:none"></textarea>
         <small class="text-muted" id="display-username"></small>
         <div class="btn-group">
-          <button class="dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Small button
-          </button>
+          </a>
           <div class="dropdown-menu">
             <a href="#">Logout</a>
           </div>
