dropdown menu styling

--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -86,10 +86,10 @@
         <small class="text-muted" id="display-username"></small>
         <div class="btn-group">
           <a href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <img class="ml-1" style="max-width:26px" src="https://lh3.googleusercontent.com/eJ6Xz07dlPwSEaT8pdPgsrBwExjl0IzK2DpEpJ_8ljbTmBAu0tqQ0KGT9IHJr_LkiQ-BaJs9VmsXI365lRSYt_bB4kk=s120" />
+            <img class="ml-1" style="max-width:26px;opacity:0.6" src="https://lh3.googleusercontent.com/eJ6Xz07dlPwSEaT8pdPgsrBwExjl0IzK2DpEpJ_8ljbTmBAu0tqQ0KGT9IHJr_LkiQ-BaJs9VmsXI365lRSYt_bB4kk=s120" />
           </a>
           <div style="padding:6px" class="dropdown-menu">
-            <a href="#">Logout</a>
+            <a style="text-decoration:none" href="#">Logout</a>
           </div>
         </div>
 
