--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -127,7 +127,9 @@
 
 <footer class="container p-3 text-muted small d-flex">
 	<div style="flex:1">
-		<img class="mr-3 mb-3" style="max-width:120px" src="https://lh3.googleusercontent.com/hlcLdauNL9UiLa3K4wF5ZPNpHzi50R26y61Ahx7oRMbUNgujN-1SmeC_3zG4EHLBH5WnRhQ1ZS19KF_xcWqkTKoENw=s320" />
+		<a target="_blank" href="/">
+			<img class="mr-3 mb-3" style="max-width:120px" src="https://lh3.googleusercontent.com/hlcLdauNL9UiLa3K4wF5ZPNpHzi50R26y61Ahx7oRMbUNgujN-1SmeC_3zG4EHLBH5WnRhQ1ZS19KF_xcWqkTKoENw=s320" />
+		</a>
 	</div>
 	<div style="padding-top:9px">
 		Copyright &copy; <script>document.write(new Date().getFullYear())</script>. All rights reserved.
