create site form on account page

--- a/views/account.mustache
+++ b/views/account.mustache
@@ -214,7 +214,7 @@
       </div>
 
       <div id="create-template-form" class="dashboard-list-box margin-top-0" style="position:fixed;width:310px;display:none">
-        <h4 class="gray">Create Template</h4>
+        <h4 class="gray">Launch Site</h4>
         <div class="dashboard-list-box-static">
 
           <div class="input-container margin-left-0">
@@ -227,14 +227,10 @@
 
           <div class="input-container margin-left-0">
             <select id="input-template-category">
-              <option value="base">Base</option>
-              <option value="resume">Resume</option>
-              <option value="landing">Landing</option>
-              <option value="portfolio">Portfolio</option>
-              <option value="professional">Professional</option>
-              <option value="performer">Performer</option>
-              <option value="agency">Agency</option>
-              <option value="community">Community</option>
+              <option value="lifestyle">Lifestyle</option>
+              <option value="politics">Politics</option>
+              <option value="sports">Sports</option>
+              <option value="technology">Technology</option>
             </select>
           </div>
 
