show loading indicator on register and login

--- a/views/partials/auth.mustache
+++ b/views/partials/auth.mustache
@@ -10,7 +10,9 @@
       <div class="modal-body">
         <input id="input-login-email" style="background:#f9f9f9;border:none" class="form-control mb-3" type="text" placeholder="Email" />
         <input id="input-login-password" style="background:#f9f9f9;border:none" class="form-control mb-3" type="password" placeholder="Password" />
-        <button id="input-login" style="width:100%" type="button" class="btn btn-primary btn-lg mb-3">Login</button>
+        <div id="input-login-container">
+          <button id="input-login" style="width:100%" type="button" class="btn btn-primary btn-lg mb-3">Login</button>
+        </div>
         <hr />
       </div>
       <div class="text-center mb-4" style="padding:1rem">
@@ -32,7 +34,9 @@
       <div class="modal-body">
         <input id="input-register-email" style="background:#f9f9f9;border:none" class="form-control mb-3" type="text" placeholder="Email" />
         <input id="input-register-password" style="background:#f9f9f9;border:none" class="form-control mb-3" type="password" placeholder="Password" />
-        <button id="input-register" style="width:100%" type="button" class="btn btn-primary btn-lg mb-3">REGISTER</button>
+        <div id="input-register-container">
+          <button id="input-register" style="width:100%" type="button" class="btn btn-primary btn-lg mb-3">REGISTER</button>        
+        </div>
         <hr />
       </div>
       <div class="text-center mb-4" style="padding:1rem">
