center justify text

--- a/views/partials/auth.mustache
+++ b/views/partials/auth.mustache
@@ -10,7 +10,7 @@
       <div class="modal-body">
         <input id="input-login-email" style="background:#f9f9f9;border:none" class="form-control mb-3" type="text" placeholder="Email" />
         <input id="input-login-password" style="background:#f9f9f9;border:none" class="form-control mb-3" type="password" placeholder="Password" />
-        <div id="input-login-container">
+        <div id="input-login-container" class="text-center">
           <button id="input-login" style="width:100%" type="button" class="btn btn-primary btn-lg mb-3">Login</button>
         </div>
         <hr />
@@ -34,7 +34,7 @@
       <div class="modal-body">
         <input id="input-register-email" style="background:#f9f9f9;border:none" class="form-control mb-3" type="text" placeholder="Email" />
         <input id="input-register-password" style="background:#f9f9f9;border:none" class="form-control mb-3" type="password" placeholder="Password" />
-        <div id="input-register-container">
+        <div id="input-register-container" class="text-center">
           <button id="input-register" style="width:100%" type="button" class="btn btn-primary btn-lg mb-3">REGISTER</button>        
         </div>
         <hr />
