--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -84,7 +84,7 @@
       <div id="comments-header" class="d-none">
         <textarea id="text-area-comment" class="form-control mt-3 mb-1" rows="3" style="padding:0px 8px;resize:none"></textarea>
         <small class="text-muted" id="display-username"></small>
-        <div class="btn-group">
+        <div id="btn-logout-container" class="btn-group">
           <a href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <img class="ml-1" style="max-width:26px;opacity:0.6" src="https://lh3.googleusercontent.com/eJ6Xz07dlPwSEaT8pdPgsrBwExjl0IzK2DpEpJ_8ljbTmBAu0tqQ0KGT9IHJr_LkiQ-BaJs9VmsXI365lRSYt_bB4kk=s120" />
           </a>
