show loading indicator

--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -148,7 +148,7 @@
                 }
 
                 console.log('REGISTER: ' + JSON.stringify(visitor))
-                $('#').html('<img style="max-width:50%" src="https://storage.turbo360.co/vertex360-cms-4hujkc/loader.gif" />')
+                $('#btn-launch-site').html('<img style="max-width:50%" src="https://storage.turbo360.co/vertex360-cms-4hujkc/loader.gif" />')
                 return
 
                 window.vertexLib.postRequest('/account/register', visitor, function(){
