--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -153,13 +153,15 @@
                 $('#btn-launch-site-container').html('<img style="max-width:30%" src="https://storage.turbo360.co/vertex360-cms-4hujkc/loader.gif" />')
                 return
 
-                window.vertexLib.postRequest('/account/register', visitor, function(){
+                window.vertexLib.postRequest('/account/register', visitor, function(err, response){
                     if (err){
+                        $('#btn-launch-site-container').html('')
                         alert(err.message)
                         return
                     }
 
-
+                    var user = response.user
+                    launchTemplate(user.username)
                 })
             })
 
