--- a/views/admin/main.mustache
+++ b/views/admin/main.mustache
@@ -11,7 +11,7 @@
   <style>
     input {
       box-shadow: none !important;
-      margin-bottom: none !important;
+      margin-bottom: 0px !important;
     }
 
     textarea {
