--- a/views/account.mustache
+++ b/views/account.mustache
@@ -104,7 +104,7 @@
 		<div class="row">
 
 			<div class="col-lg-8 col-md-8">
-        <div id="content-profile" class="dashboard-list-box margin-top-0">
+        <div id="content-profile" class="dashboard-list-box margin-top-0 margin-bottom-40">
           <a style="float:right;border-radius:4px;background:#357d3e;margin-top:16px;margin-right:16px" class="button" href="/templates"><i class="sl sl-icon-plus"></i> Create Your Site</a>
           <a style="float:right;border-radius:4px;background:#354e7d;margin-top:16px;margin-right:16px" class="button" href="/profile/{{user.slug}}">View Your Profile</a>
 					<h4 class="gray">Profile Details</h4>
@@ -164,7 +164,7 @@
 				</div>
 			</div>
 
-      <div id="content-sites" class="dashboard-list-box margin-top-0">
+      <div id="content-sites" class="dashboard-list-box margin-top-0 margin-bottom-40">
         <h4 class="gray">Manage Your Sites</h4>
         <ul>
           {{#sites}}
