--- a/views/account.mustache
+++ b/views/account.mustache
@@ -195,7 +195,7 @@
 		</div>
 
     <div class="col-lg-4 col-md-4">
-      <div id="profile-card" class="dashboard-list-box margin-top-0" style="position:fixed;width:310px;">
+      <div id="profile-card" class="dashboard-list-box margin-top-0">
         <h4 class="gray">Profile</h4>
         <div class="dashboard-list-box-static">
           <a href="/profile/{{user.slug}}">
@@ -212,7 +212,7 @@
         </div>
       </div>
 
-      <div id="create-template-form" class="dashboard-list-box margin-top-0" style="position:fixed;width:310px;display:none">
+      <div id="create-template-form" class="dashboard-list-box margin-top-0" style="display:none">
         <h4 class="gray">Launch Site</h4>
         <div class="dashboard-list-box-static">
 
