redirect to new site on register from landing

--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -147,8 +147,8 @@
                     return
                 }
 
-                    // window.location.href = '/admin/pages/'+siteSlug // redirect to site admin page
-                    window.location.href = '/me?selected=sites'
+                    // window.location.href = '/me?selected=sites'
+                    window.location.href = 'https://'+siteSlug+'.vertex360.co'
                 })
             }
 
