--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -208,6 +208,7 @@
           $('#comments-header').removeClass('d-none')
           $('#register-or-login').addClass('d-none')
           $('#display-username').html('Logged in as '+user.username)
+          $('#btn-view-profile').attr('href', '/profile/'+user.slug)
         }
         else {
           $('#comments-header').addClass('d-none')
