convert to unordered list

--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -88,10 +88,14 @@
           <a href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <img class="ml-1" style="max-width:26px;opacity:0.6" src="https://lh3.googleusercontent.com/eJ6Xz07dlPwSEaT8pdPgsrBwExjl0IzK2DpEpJ_8ljbTmBAu0tqQ0KGT9IHJr_LkiQ-BaJs9VmsXI365lRSYt_bB4kk=s120" />
           </a>
-          <div style="padding:6px" class="dropdown-menu">
-            <a id="btn-logout" style="text-decoration:none" href="#">Logout</a>
-            <a id="btn-view-profile" style="text-decoration:none" href="#">View Profile</a>
-          </div>
+          <ul style="padding:6px" class="dropdown-menu">
+            <li>
+              <a id="btn-logout" style="text-decoration:none" href="#">Logout</a>
+            </li>
+            <li>
+              <a id="btn-view-profile" target="_blank" style="text-decoration:none" href="#">View Profile</a>
+            </li>
+          </ul>
         </div>
 
         <button id="btn-submit-comment" class="mb-3 btn btn-success float-right mt-2">Add Comment</button>
