--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -88,7 +88,7 @@
           <a href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <img class="ml-1" style="max-width:26px;opacity:0.6" src="https://lh3.googleusercontent.com/eJ6Xz07dlPwSEaT8pdPgsrBwExjl0IzK2DpEpJ_8ljbTmBAu0tqQ0KGT9IHJr_LkiQ-BaJs9VmsXI365lRSYt_bB4kk=s120" />
           </a>
-          <ul style="padding:6px" class="dropdown-menu">
+          <ul style="padding:6px 12px" class="dropdown-menu">
             <li>
               <a id="btn-logout" style="text-decoration:none" href="#">Logout</a>
             </li>
