up down and score links

--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -120,7 +120,10 @@
             </div>
             <p style="color:#7d7d7d">{{{text}}}</p>
           </div>
-          <div style="width:24px;background:#e8f2ff">
+          <div style="width:24px;background:#e8f2ff;display:flex;flex-direction:column">
+            <a href="#">up</a>
+            <span>score</span>
+            <a href="#">down</a>
           </div>
         </div>
         {{/comments}}
