--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -161,9 +161,9 @@
         <p style="color:#7d7d7d"><%{text}%></p>
       </div>
       <div style="width:24px;background:#e8f2ff;display:flex;flex-direction:column">
-        <a href="#">up</a>
+        <a href="#"><i class="fa fa-arrow-alt-up"></i></a>
         <span>score</span>
-        <a href="#">down</a>
+        <a href="#"><i class="fa fa-arrow-alt-down"></i></a>
       </div>
     </div>
   </script>
