--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -5,6 +5,7 @@
   <meta name="description" content="" />
 
   {{>head}}
+  <link rel="stylesheet" href="{{{cdn}}}/css/fontawesome-5.3.1.min.css" />
   <style>
     .thread-preview {
       border: 1px solid #ededed;
