--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -161,10 +161,10 @@
         </div>
         <p style="color:#7d7d7d"><%{text}%></p>
       </div>
-      <div style="width:24px;background:#e8f2ff;display:flex;flex-direction:column;text-align:center">
-        <a href="#"><i class="fa fa-arrow-up"></i></a>
-        <span>15</span>
-        <a href="#"><i class="fa fa-arrow-down"></i></a>
+      <div style="padding:6px;background:#e8f2ff;display:flex;flex-direction:column;text-align:center">
+        <a href="#"><i style="font-size:20px" class="fa fa-arrow-up"></i></a>
+        <small>15</small>
+        <a href="#"><i style="font-size:20px" class="fa fa-arrow-down"></i></a>
       </div>
     </div>
   </script>
